--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Translation</string>
+    <string name="greeting_message">Hi, InnoTranslate!</string>
 </resources>
