更新了多个界面的前端实现

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Translation</string>
     <string name="greeting_message">Hi, InnoTranslate!</string>
+    <string name="btn_gallery">Gallery</string>
+    <string name="btn_capture">Capture</string>
 </resources>
