更新了多个界面的前端实现

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="btn_capture">Capture</string>
     <string name="change_avatar">更改头像</string>
     <string name="voice_input_button">开始语音输入</string>
+    <string name="source_language_prompt">选择源语言</string>
+    <string name="target_language_prompt">选择目标语言</string>
 </resources>
